--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.6.1",
+    "@reduxjs/toolkit": "^2.6.1",
     "antd": "^5.24.6",
     "axios": "^1.8.4",
+    "dot-env": "^0.0.1",
     "husky": "^9.1.7",
+    "motion": "^12.7.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.0",
     "serve": "^14.2.4",
     "vite-plugin-commonjs": "^0.10.4",
@@ -25,6 +30,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/node": "^22.14.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@typescript-eslint/parser": "^8.29.1",
