added misa files mf

--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
 MISA_HOST_LOCAL=localhost
 MISA_HOST=https://api.misaserver.ru/core
 
-PROD_HOST=MisaServerCoreFE
+HOST=localhost
+IS_PROD=false
+PORT=8080
+MISA_FILES_ENTRY_HOST=http://localhost
+MISA_FILES_ENTRY_PORT=8001
