--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcryptjs": "^3.0.2",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.13",
+    "dotenv": "^16.5.0",
     "husky": "^9.1.7",
     "motion": "^12.7.4",
     "react": "^19.0.0",
