--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
     "dev": "vite --port 8000",
     "serve": "vite preview",
     "build": "vite build",
-    "lint": "eslint .",
+    "lint": "eslint ./src",
     "check": "npm run lint",
     "preview": "vite preview",
     "prepare": "husky"
   },
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
+    "@originjs/vite-plugin-federation": "^1.4.1",
     "@reduxjs/toolkit": "^2.6.1",
-    "antd": "^5.24.6",
+    "antd": "^5.24.8",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
     "classnames": "^2.5.1",
@@ -24,17 +25,16 @@
     "dotenv": "^16.5.0",
     "husky": "^9.1.7",
     "motion": "^12.7.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.5.0",
+    "react-router-dom": "^7.5.3",
     "serve": "^14.2.4",
     "vite-plugin-commonjs": "^0.10.4",
     "vite-tsconfig-paths": "^5.1.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
-    "@module-federation/vite": "^1.2.6",
     "@types/node": "^22.14.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
